--- a/find_all_here/find_all_here/Shell.xaml
+++ b/find_all_here/find_all_here/Shell.xaml
@@ -30,7 +30,7 @@
         <ShellContent Title="Búsqueda" Icon="search.png" Route="SearchPage" ContentTemplate="{DataTemplate local:Search}" />
         <ShellContent Title="Nuevo" Icon="upload.png" Route="UploadPage" ContentTemplate="{DataTemplate local:Users}"/>
         <ShellContent Title="Bandeja" Icon="inbox.png" Route="InboxPage" ContentTemplate="{DataTemplate local:Inbox}" />
-        <ShellContent Title="Perfil" Icon="user.png" Route="UserPage" ContentTemplate="{DataTemplate local:User}" />
+        <ShellContent Title="Perfil" Icon="user.png" Route="UserPage" ContentTemplate="{DataTemplate local:Profile}" />
     </TabBar>
 
     <!--
