--- a/find_all_here/find_all_here/HomeView.xaml
+++ b/find_all_here/find_all_here/HomeView.xaml
@@ -1,14 +1,21 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:local="clr-namespace:find_all_here.ViewModels" xmlns:model="clr-namespace:find_all_here.Models" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" Title="{Binding Title}" x:Class="find_all_here.Home" x:Name="BrowseProductsPage">
+<ContentPage
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:local="clr-namespace:find_all_here.ViewModels"
+    xmlns:model="clr-namespace:find_all_here.Models"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:find_all_here="clr-namespace:find_all_here"
+    x:Class="find_all_here.HomeView"
+    x:Name="BrowseProductsPage"
+    Title="{Binding Title}">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Agregar" Command="{Binding AddProductCommand}" />
     </ContentPage.ToolbarItems>
     <RefreshView x:DataType="local:HomeViewModel" Command="{Binding LoadProductsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-        <CollectionView x:Name="ProductsListView" ItemsSource="{Binding BindingProducts}" SelectionMode="None" BackgroundColor="{StaticResource bg-body}">
+        <CollectionView x:Name="ProductsListView" ItemsSource="{Binding BindingProducts}" SelectionMode="None">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Frame Background="{StaticResource bg-container}" Margin="0,20" Padding="0" HasShadow="True" CornerRadius="0">
-                        <StackLayout>
+                <DataTemplate >
+                    <Frame BackgroundColor="{StaticResource bg-body}" Padding="0" HasShadow="True" CornerRadius="0">
+                        <StackLayout Background="{StaticResource bg-container}" Margin="0,20,0,0">
                             <Grid Margin="10,10,10,0" Padding="0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition />
@@ -20,15 +27,15 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="1*" />
                                 </Grid.ColumnDefinitions>
-                                <ImageButton Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Center" HorizontalOptions="Center" Source="" CornerRadius="250" WidthRequest="40" HeightRequest="40" BackgroundColor="{StaticResource bg-profile}" />
+                                <ImageButton Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Center" HorizontalOptions="Center" Source="{Binding U_profile_mini}" CornerRadius="250" WidthRequest="40" HeightRequest="40" BackgroundColor="{StaticResource bg-profile}" />
                                 <Frame Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" CornerRadius="0" Margin="0" Padding="10,0,0,0" BackgroundColor="Transparent" HorizontalOptions="Start">
-                                    <Label Text="{Binding User.Names}" TextColor="#fff" Padding="0" FontSize="14" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center">
+                                    <Label TextColor="#fff" Padding="0" FontSize="14" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center">
                                         <Label.FormattedText>
                                             <FormattedString>
                                                 <FormattedString.Spans>
-                                                    <Span Text="{Binding User.Names}" />
+                                                    <Span Text="{Binding U_names}" />
                                                     <Span Text=" " />
-                                                    <Span Text="{Binding User.Surnames}" />
+                                                    <Span Text="{Binding U_surnames}" />
                                                 </FormattedString.Spans>
                                             </FormattedString>
                                         </Label.FormattedText>
@@ -37,7 +44,7 @@
                                         </Label.GestureRecognizers>
                                     </Label>
                                 </Frame>
-                                <Label Grid.Column="3" Grid.Row="0" Padding="10,0,0,0" FontSize="12" TextDecorations="None" TextColor="{StaticResource lbl-primary}" VerticalOptions="Center" HorizontalOptions="End" Text="27 de mar. 2021" />
+                                <Label Grid.Column="3" Grid.Row="0" Padding="10,0,0,0" FontSize="12" TextDecorations="None" TextColor="{StaticResource lbl-primary}" VerticalOptions="Center" HorizontalOptions="End" x:DataType="model:Product" Text="{Binding Relative_time}" />
                                 <Label Grid.Column="1" Grid.Row="1" VerticalOptions="Center" HorizontalOptions="StartAndExpand" Margin="0" Padding="10,0,0,0" VerticalTextAlignment="Center" HorizontalTextAlignment="Start">
                                     <Label.FormattedText>
                                         <FormattedString>
@@ -72,6 +79,8 @@
                                             <Span Text="{Binding Category.Name}" />
                                             <Span Text=" - " />
                                             <Span Text="{Binding Description}" />
+                                            <Span Text=" - " />
+                                            <Span Text="{Binding Product_status}" />
                                         </FormattedString.Spans>
                                     </FormattedString>
                                 </Label.FormattedText>
