--- a/find_all_here/find_all_here/HomeView.xaml
+++ b/find_all_here/find_all_here/HomeView.xaml
@@ -27,15 +27,15 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="1*" />
                                 </Grid.ColumnDefinitions>
-                                <ImageButton Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Center" HorizontalOptions="Center" Source="{Binding U_profile_mini}" CornerRadius="250" WidthRequest="40" HeightRequest="40" BackgroundColor="{StaticResource bg-profile}" />
+                                <ImageButton Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Center" HorizontalOptions="Center" x:DataType="model:Product" Source="{Binding User.Profile_mini}" CornerRadius="250" WidthRequest="40" HeightRequest="40" BackgroundColor="{StaticResource bg-profile}" />
                                 <Frame Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" CornerRadius="0" Margin="0" Padding="10,0,0,0" BackgroundColor="Transparent" HorizontalOptions="Start">
                                     <Label TextColor="#fff" Padding="0" FontSize="14" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center">
                                         <Label.FormattedText>
                                             <FormattedString>
                                                 <FormattedString.Spans>
-                                                    <Span Text="{Binding U_names}" />
+                                                    <Span Text="{Binding User.Names}" />
                                                     <Span Text=" " />
-                                                    <Span Text="{Binding U_surnames}" />
+                                                    <Span Text="{Binding User.Surnames}" />
                                                 </FormattedString.Spans>
                                             </FormattedString>
                                         </Label.FormattedText>
@@ -55,7 +55,8 @@
                                                 <Span Text="S/" FontAttributes="Bold" FontSize="12" TextColor="{StaticResource lbl-primary}" />
                                                 <Span Text="{Binding Sale_price}" FontAttributes="Bold" FontSize="12" TextColor="{StaticResource lbl-primary}" />
                                                 <Span Text=" " />
-                                                <Span Text="-5%" FontAttributes="Bold" FontSize="10" TextColor="{StaticResource btn-success}" />
+                                                <Span Text="{Binding Percent}" FontAttributes="Bold" FontSize="10" TextColor="{Binding Color_percent}" />
+                                                <Span Text="%" FontAttributes="Bold" FontSize="10" TextColor="{Binding Color_percent}" />
                                                 <Span Text=" • " />
                                             </FormattedString.Spans>
                                         </FormattedString>
